fix(export): remove adding url to external links to avoid layout problems

--- a/src/slides/_basic.scss
+++ b/src/slides/_basic.scss
@@ -133,6 +133,9 @@ html, body {
       color: $w11k-slides-color-2;
       text-decoration: none;
     }
+    a[href^="http"] {
+      text-decoration: underline;
+    }
     a:hover, a:focus {
       text-decoration: underline;
     }
